Bug 455244 - crash clicking brush settings button when brush selection button is open if brush has been set to new smudge algorithm
Summary: crash clicking brush settings button when brush selection button is open if b...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: 5.0.6
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-14 11:34 UTC by fivetailsfox
Modified: 2022-07-13 08:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fivetailsfox 2022-06-14 11:34:26 UTC
SUMMARY:
If I choose a smudge brush (default or custom) and enable the new smudge algorithm, opening brush settings by clicking the button on the UI while the pop-up for the brush selection button is still open will cause a crash.


STEPS TO REPRODUCE:
1. open krita and load a document, a new one will do
2. choose a smudge brush (e.g. "wet bristles rough"), and enable 'new smudge algorithm' under 'smudge length'
3. click the 'brush selection' button on the UI to open the pop-up with the list of brushes
4. while it is open, click the 'brush settings' button on the UI.

OBSERVED RESULT:
Krita freezes and crashes.

EXPECTED RESULT
The brush settings window opens and the brush selection pop-up closes

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Dmitry Kazakov 2022-07-13 07:32:34 UTC
I can reproduce the crash here in master :)
Comment 2 Dmitry Kazakov 2022-07-13 08:11:56 UTC
Git commit 5558ebc0274adee3543d80d433d4c1d298abff12 by Dmitry Kazakov.
Committed on 13/07/2022 at 08:11.
Pushed by dkazakov into branch 'master'.

Fix cycling updates in the new colorsmudge enginge config widget

When changing radius range we may accidentially change the actual
radius value. Since it happens in the 'page-changed' call, we need
to make sure this change doesn't emit any signal.

M  +2    -0    plugins/paintops/colorsmudge/kis_colorsmudgeop_settings_widget.cpp

https://invent.kde.org/graphics/krita/commit/5558ebc0274adee3543d80d433d4c1d298abff12
Comment 3 Dmitry Kazakov 2022-07-13 08:12:04 UTC
Git commit d1625a218353c3186e3f82e4b665a58d9c61fa77 by Dmitry Kazakov.
Committed on 13/07/2022 at 08:11.
Pushed by dkazakov into branch 'krita/5.1'.

Fix cycling updates in the new colorsmudge enginge config widget

When changing radius range we may accidentially change the actual
radius value. Since it happens in the 'page-changed' call, we need
to make sure this change doesn't emit any signal.

M  +2    -0    plugins/paintops/colorsmudge/kis_colorsmudgeop_settings_widget.cpp

https://invent.kde.org/graphics/krita/commit/d1625a218353c3186e3f82e4b665a58d9c61fa77