Fix cycling updates in the new colorsmudge enginge config widget

When changing radius range we may accidentially change the actual
radius value. Since it happens in the 'page-changed' call, we need
to make sure this change doesn't emit any signal.

BUG:455244